--- a/.github/workflows/2-assign-yourself.yml
+++ b/.github/workflows/2-assign-yourself.yml
@@ -41,11 +41,7 @@ jobs:
     # 2. The step is currently 2.
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
-    if: >-
-      ${{ !github.event.repository.is_template
-          && needs.get_current_step.outputs.current_step == 2 }}
-
-    # We'll run Ubuntu for performance instead of Mac or Windows.
+    if: false
     runs-on: ubuntu-latest
 
     steps:
