--- a/.github/workflows/2-assign-yourself.yml
+++ b/.github/workflows/2-assign-yourself.yml
@@ -1,10 +1,5 @@
-name: Step 2, Assign yourself
+name: Update Step Workflow
 
-# This step triggers after the user assigns themselves as a pull request reviewer.
-# This workflow updates from step 2 to step 3.
-
-# This will run every time someone is assigned as a pull request reviewer.
-# Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
   pull_request:
@@ -12,14 +7,10 @@ on:
       - assigned
       - review_requested
 
-# Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
-  # Need `contents: read` to checkout the repository.
-  # Need `contents: write` to update the step metadata.
   contents: write
 
 jobs:
-  # Get the current step to only run the main job when the learner is on the same step.
   get_current_step:
     name: Check current step number
     runs-on: ubuntu-latest
@@ -35,28 +26,18 @@ jobs:
   on_assigned_reviewer:
     name: On assigned reviewer
     needs: get_current_step
+    if: >-
+      ${{ !github.event.repository.is_template
+          && needs.get_current_step.outputs.current_step == 2 }}
 
-    # We will only run this action when:
-    # 1. This repository isn't the template repository.
-    # 2. The step is currently 2.
-    # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
-    # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
-    if: false
     runs-on: ubuntu-latest
 
     steps:
-      # We'll need to check out the repository so that we can edit the README.
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Let's get all the branches.
+          fetch-depth: 0
           ref: update-game
 
-      # In README.md, switch step 2 for step 3.
-      - name: Update to step 3
-        uses: skills/action-update-step@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          from_step: 2
-          to_step: 3
-          branch_name: update-game
+      - name: Advance to step 3
+        run: echo "3" > ./.github/steps
